画像を動的に表示

--- a/blog/my-first-post/index.mdx
+++ b/blog/my-first-post/index.mdx
@@ -1,6 +1,10 @@
 ---
 title: 'My First Post'
 date: '2021-07-23'
+hero_image: './shubham-dhage-t7F9F8cBkag-unsplash.jpg'
+hero_image_alt: 'orange box'
+hero_image_credit_text: 'orange'
+hero_image_credit_link: 'https://unsplash.com/photos/t7F9F8cBkag'
 ---
 
 This is my first blog post! Isn't it _great_?
